# hermes-observer

./: .gitignore  AGENTS.md  README.md  llms.txt  observer.config.example.json  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-task.yml  private-integration.yml
docs/: AI_QUICKSTART.md  MCP_SERVER.md  PRIVATE_INTEGRATIONS.md  RISK_REVIEW.md
examples/demo-hermes/cron/: jobs.json
examples/demo-hermes/fixtures/: example_daily_queue.json
examples/workspace/example_transcripts/: archive_manifest.json
hermes_observer/: __init__.py  cli.py  mcp_server.py  observer.py  wake.py
